# Sklearn-Nature-Inspired-Algorithms

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  version.sh
.github/workflows/: ci.yml  publish.yml
ci/: prepare_env.sh
docs/: conf.py  index.rst
docs/advanced/: niapy.rst
docs/introduction/: algorithms.rst  nature-inspired-search-cv.rst  usage.rst  visualisation.rst
examples/: example_1.ipynb  example_2.ipynb
examples/notebooks/: example_2.ipynb  hyper_parameter_tuning_nia_comparison.ipynb  hyper_parameter_tuning_nia_sample.ipynb  hyper_parameter_tuning_nia_vs_grid_search.ipynb
scripts/: is_semver.py
sklearn_nature_inspired_algorithms/helpers/: __init__.py  score_by_generation_lineplot.py  score_by_generation_violinplot.py
sklearn_nature_inspired_algorithms/model_selection/: __init__.py  _helpers.py  _param_grid.py  _parameter_search.py  _parameter_search_benchmark.py  _stagnation_stopping_task.py  nature_inspired_search.py  nature_inspired_search_cv.py
tests/: __init__.py
tests/model_selection/: __init__.py  cross_validation_test_case.py  helpers_test_case.py  nature_inspired_search_test_case.py  param_grid_test_case.py  test_sklearn_nature_inspired_search.py  test_sklearn_nature_inspired_search_cv.py
