[tool.poetry]
name = "sklearn_nature_inspired_algorithms"
version = "v0.5.0"
description = "Search using nature inspired algorithms over specified parameter values for an sklearn estimator."

license = "MIT"

authors = [
    "Timotej Zatko <timi.zatko@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/timzatko/Sklearn-Nature-Inspired-Algorithms"
homepage = "https://github.com/timzatko/Sklearn-Nature-Inspired-Algorithms"

keywords = ['sklearn', 'scikit-learn', 'nature-inspired-algorithms', 'hyper-parameter-tuning']

[tool.poetry.dependencies]
python = "^3.6.1"  # Compatible python versions must be declared here
toml = "^0.10"
NiaPy = { version = "2.0.0rc10" }
scikit-learn = "^0.23"
numpy = "^1.19"
matplotlib = "^3.3"
seaborn = "^0.11"
pandas = "^1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
coverage = "^5.1"
[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

