[tool.poetry]
name = "sklearn_nature_inspired_algorithms"
version = "v0.6.1"
description = "Search using nature inspired algorithms over specified parameter values for an sklearn estimator."

license = "MIT"

authors = [
    "Timotej Zatko <timi.zatko@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/timzatko/Sklearn-Nature-Inspired-Algorithms"
homepage = "https://github.com/timzatko/Sklearn-Nature-Inspired-Algorithms"

keywords = ['sklearn', 'scikit-learn', 'nature-inspired-algorithms', 'hyper-parameter-tuning']

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
python = ">= 3.6.1, < 4.0.0"
toml = ">= 0.9, < 1.0.0"
scikit-learn = ">= 0.22, < 1.0.0"
numpy = ">= 1.18, < 2.0.0"
matplotlib = ">= 3.2, < 4.0.0"
seaborn = ">= 0.10, < 1.0.0"
pandas = ">= 1.0, < 2.0.0"
niapy = "2.0.0rc18"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
coverage = "^5.1"
[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

